--- a/css/common.css
+++ b/css/common.css
@@ -23,5 +23,15 @@ button {
   cursor: pointer;
 }
 
+img {
+  width: 360px;
+  height: 220px;
+}
 
+.gallery{
+  list-style: none;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
 
